syntax = "proto3";
package proto;
option go_package = "./proto";

import "common.proto";
import "account.proto";

service AuthService {
    rpc SignIn(SignInRequest) returns (AccountDetails);
    rpc SignUp(SignUpRequest) returns (AccountDetails);
    rpc RefreshTwoFactorCode(RefreshTwoFactorCodeRequest) returns (Status);
    rpc ValidateTwoFactorCode(TwoFactorCode) returns (Status);
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignUpRequest {
	string full_name = 1;
	string user_name = 2;
	string email = 3;
	string password = 4;
	int64 age = 5;
	string role = 6;
}

message RefreshTwoFactorCodeRequest{
    string email = 1;
}

message TwoFactorCode {
    string email = 1;
    string two_factor_code = 2;
}